Added rest APIs, reorged things a bit

--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cardiovascular-element",
+   "id": "likely-azerbaijan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "removed-terminology",
+   "id": "timely-needle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "potential-picture",
+   "id": "lesbian-hollywood",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aerial-globe",
+   "id": "nominated-faculty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "revolutionary-blood",
+   "id": "emotional-honduras",
    "metadata": {},
    "outputs": [
     {
@@ -69,42 +69,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "minimal-fantasy",
+   "execution_count": 2,
+   "id": "proof-ticket",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib.alpaca_ws as alpaca_ws"
+    "import lib.alpaca.rest as alpaca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "protecting-outside",
+   "execution_count": 4,
+   "id": "pointed-meeting",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'on_message' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-9945ee5a8b9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0malpaca_ws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/src/money_printer/learnin/src/lib/alpaca_ws.py\u001b[0m in \u001b[0;36mstart_stream\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstart_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mws\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0minit_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_forever\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/src/money_printer/learnin/src/lib/alpaca_ws.py\u001b[0m in \u001b[0;36minit_stream\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0minit_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     ws = websocket.WebSocket(ws_url,\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mon_message\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mon_message\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0mon_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mon_error\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         on_close = on_close)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'on_message' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'id': '9d49d83a-2fb1-4d3c-aa46-a8fdbda715a6',\n",
+       " 'account_number': 'PA3G2A0FAKDN',\n",
+       " 'status': 'ACTIVE',\n",
+       " 'currency': 'USD',\n",
+       " 'buying_power': '0',\n",
+       " 'regt_buying_power': '0',\n",
+       " 'daytrading_buying_power': '0',\n",
+       " 'cash': '0',\n",
+       " 'portfolio_value': '0',\n",
+       " 'pattern_day_trader': False,\n",
+       " 'trading_blocked': False,\n",
+       " 'transfers_blocked': False,\n",
+       " 'account_blocked': False,\n",
+       " 'created_at': '2021-02-08T15:52:12.3641Z',\n",
+       " 'trade_suspended_by_user': False,\n",
+       " 'multiplier': '1',\n",
+       " 'shorting_enabled': False,\n",
+       " 'equity': '0',\n",
+       " 'last_equity': '0',\n",
+       " 'long_market_value': '0',\n",
+       " 'short_market_value': '0',\n",
+       " 'initial_margin': '0',\n",
+       " 'maintenance_margin': '0',\n",
+       " 'last_maintenance_margin': '0',\n",
+       " 'sma': '0',\n",
+       " 'daytrade_count': 0}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpaca_ws.start_stream()"
+    "alpaca.auth()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dense-gospel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://data.alpaca.markets/v1/bars/1D?limit=100&symbols=spy\n",
+      "<Response [200]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'spy': []}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpaca.bars(['SPY'], alpaca.Timeframe.day)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tropical-visiting",
+   "id": "quick-regard",
    "metadata": {},
    "outputs": [],
    "source": []
