Adds code to the notebook to pull historical data for a stock

--- a/notebooks/technical_prediction/technical_prediction_data.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "commercial-reputation",
+   "id": "hundred-judge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "# python's shit\n",
     "from datetime import date, datetime, timedelta\n",
     "import time\n",
+    "import calendar\n",
     "\n",
     "# someone elses shit\n",
     "import finnhub\n",
@@ -26,17 +27,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "passive-verification",
+   "id": "baking-cannon",
    "metadata": {},
    "outputs": [],
    "source": [
-    "finnhub_client = finnhub.Client(api_key=config.api_keys['finnhub']['sandbox'])"
+    "finnhub_client = finnhub.Client(api_key=config.api_keys['finnhub']['sandbox'])\n",
+    "jar = PickleJar()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "piano-chair",
+   "id": "protected-principle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "alike-irish",
+   "id": "comparative-milwaukee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "satisfied-exposure",
+   "id": "promotional-reply",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-purpose",
+   "id": "removed-sense",
    "metadata": {},
    "source": [
     "Build a base data frame from the stock's low, open, close, high and volume for the given time period"
@@ -89,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "baking-disposal",
+   "id": "minute-weather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-astrology",
+   "id": "dying-plastic",
    "metadata": {},
    "source": [
     "Construct a set of data frames that each hold:\n",
@@ -126,36 +128,174 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "objective-plaza",
+   "id": "latin-bedroom",
    "metadata": {},
    "outputs": [],
    "source": [
     "def construct_data_frames(ticker, date):\n",
     "    trend = recommendation_trends_by_date(ticker, date)\n",
+    "    trend_total = trend['strongSell'] + trend['sell'] + trend['hold'] + trend['buy'] + trend['strongBuy']\n",
     "    earnings = company_earnings_by_date(ticker, date)\n",
     "    static_data = [\n",
     "        earnings['actual'], earnings['estimate'],\n",
-    "        trend['strongSell'], trend['sell'], trend['hold'], trend['buy'], trend['strongBuy']\n",
+    "        trend['strongSell'] / trend_total, trend['sell'] / trend_total,\n",
+    "        trend['hold'] / trend_total,\n",
+    "        trend['buy'] / trend_total, trend['strongBuy'] / trend_total\n",
     "    ]\n",
     "    base_frames = stock_candles_by_date(ticker, date)\n",
     "    return [list(x) + static_data for x in base_frames]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "perfect-tunisia",
+   "cell_type": "markdown",
+   "id": "agreed-funeral",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "jar = PickleJar()\n",
-    "data_frames_02_24_22 = jar.read_pickle_dataframe(\"{0}-{1}.technical.df.pkl\".format('AAPL', today.strftime(\"%m-%d-%Y\")))"
+    "Go through the calendar and fetch all the historical data on this ticker that we have access to.\n",
+    "Let's start with 3 months."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bright-means",
+   "execution_count": 14,
+   "id": "martial-royalty",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_historical_data(ticker, days = 90):\n",
+    "    # if this historical pickle file exists, just return it\n",
+    "    historical_pickle_name = \"{0}.technical.historical.df.pkl\".format(ticker)\n",
+    "    if jar.pickle_exists(historical_pickle_name):\n",
+    "        return jar.read_pickle_dataframe(historical_pickle_name)\n",
+    "    # if it doesn't, build it\n",
+    "    historical_data = []\n",
+    "    today = date.today()\n",
+    "    x_days_ago = today + timedelta(days = -1 * days)\n",
+    "    current_date = x_days_ago\n",
+    "    while current_date < today:\n",
+    "        # look for pickle file for this days data for this day's ticker\n",
+    "        pickle_name = \"{0}-{1}.technical.df.pkl\".format(ticker, current_date.strftime(\"%m-%d-%Y\"))\n",
+    "        if jar.pickle_exists(pickle_name):\n",
+    "            data = jar.read_pickle_dataframe(pickle_name)\n",
+    "        else:\n",
+    "            data = construct_data_frames(ticker, current_date)\n",
+    "            # pickle this day's data to cut down own API requests\n",
+    "            df = pandas.DataFrame(data)\n",
+    "            jar.write_pickle_dataframe(pickle_name, df)\n",
+    "        historical_data.append(data)\n",
+    "        current_date = current_date + timedelta(days = 1)\n",
+    "    # pickle this historical data\n",
+    "    historical_df = pandas.DataFrame(historical_data)\n",
+    "    jar.write_pickle_dataframe(historical_pickle_name, historical_df)\n",
+    "    return historical_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "rolled-samuel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tim/.pyenv/versions/3.8.7/lib/python3.8/site-packages/pandas/core/internals/construction.py:309: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  values = np.array([convert(v) for v in values])\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = get_historical_data('AAPL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "third-mortality",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0           1           2        ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0           1           2        ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0           1           2        ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0           1           2        ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0           1           2        ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "0               0           1           2        ...\n",
+       "1               0           1           2        ...\n",
+       "2               0           1           2        ...\n",
+       "3               0           1           2        ...\n",
+       "4               0           1           2        ..."
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "advanced-trail",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frames_02_24_22 = jar.read_pickle_dataframe(\"{0}-{1}.technical.df.pkl\".format('AAPL', yesterday.strftime(\"%m-%d-%Y\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "choice-evanescence",
    "metadata": {},
    "outputs": [
     {
@@ -198,98 +338,98 @@
        "      <th>0</th>\n",
        "      <td>122.631000</td>\n",
        "      <td>123.000000</td>\n",
-       "      <td>123.282900</td>\n",
+       "      <td>122.815500</td>\n",
        "      <td>123.492000</td>\n",
-       "      <td>41</td>\n",
+       "      <td>69</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>113</td>\n",
-       "      <td>62.5</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.174731</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.276882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>123.182840</td>\n",
-       "      <td>123.553500</td>\n",
-       "      <td>123.837673</td>\n",
-       "      <td>124.047714</td>\n",
-       "      <td>85</td>\n",
+       "      <td>122.385738</td>\n",
+       "      <td>122.754000</td>\n",
+       "      <td>122.569869</td>\n",
+       "      <td>123.245016</td>\n",
+       "      <td>83</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>113</td>\n",
-       "      <td>62.5</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.174731</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.276882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>123.737162</td>\n",
-       "      <td>124.109491</td>\n",
-       "      <td>124.394943</td>\n",
-       "      <td>124.605929</td>\n",
-       "      <td>99</td>\n",
+       "      <td>122.140967</td>\n",
+       "      <td>122.508492</td>\n",
+       "      <td>122.324729</td>\n",
+       "      <td>122.998526</td>\n",
+       "      <td>91</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>113</td>\n",
-       "      <td>62.5</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.174731</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.276882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>124.293980</td>\n",
-       "      <td>124.667983</td>\n",
-       "      <td>124.480981</td>\n",
-       "      <td>125.166655</td>\n",
-       "      <td>22</td>\n",
+       "      <td>121.896685</td>\n",
+       "      <td>122.263475</td>\n",
+       "      <td>122.544681</td>\n",
+       "      <td>122.752529</td>\n",
+       "      <td>36</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>113</td>\n",
-       "      <td>62.5</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.174731</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.276882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>124.045392</td>\n",
-       "      <td>124.418647</td>\n",
-       "      <td>124.704810</td>\n",
-       "      <td>124.916322</td>\n",
-       "      <td>74</td>\n",
+       "      <td>122.445220</td>\n",
+       "      <td>122.813661</td>\n",
+       "      <td>123.096132</td>\n",
+       "      <td>123.304915</td>\n",
+       "      <td>97</td>\n",
        "      <td>1.68</td>\n",
        "      <td>1.555857</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>113</td>\n",
-       "      <td>62.5</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.174731</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.276882</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0           1           2           3   4     5         6    7   \\\n",
-       "0  122.631000  123.000000  123.282900  123.492000  41  1.68  1.555857  5.5   \n",
-       "1  123.182840  123.553500  123.837673  124.047714  85  1.68  1.555857  5.5   \n",
-       "2  123.737162  124.109491  124.394943  124.605929  99  1.68  1.555857  5.5   \n",
-       "3  124.293980  124.667983  124.480981  125.166655  22  1.68  1.555857  5.5   \n",
-       "4  124.045392  124.418647  124.704810  124.916322  74  1.68  1.555857  5.5   \n",
+       "           0           1           2           3   4     5         6   \\\n",
+       "0  122.631000  123.000000  122.815500  123.492000  69  1.68  1.555857   \n",
+       "1  122.385738  122.754000  122.569869  123.245016  83  1.68  1.555857   \n",
+       "2  122.140967  122.508492  122.324729  122.998526  91  1.68  1.555857   \n",
+       "3  121.896685  122.263475  122.544681  122.752529  36  1.68  1.555857   \n",
+       "4  122.445220  122.813661  123.096132  123.304915  97  1.68  1.555857   \n",
        "\n",
-       "    8     9    10    11  \n",
-       "0  5.5  39.5  113  62.5  \n",
-       "1  5.5  39.5  113  62.5  \n",
-       "2  5.5  39.5  113  62.5  \n",
-       "3  5.5  39.5  113  62.5  \n",
-       "4  5.5  39.5  113  62.5  "
+       "         7         8         9    10        11  \n",
+       "0  0.024194  0.024194  0.174731  0.5  0.276882  \n",
+       "1  0.024194  0.024194  0.174731  0.5  0.276882  \n",
+       "2  0.024194  0.024194  0.174731  0.5  0.276882  \n",
+       "3  0.024194  0.024194  0.174731  0.5  0.276882  \n",
+       "4  0.024194  0.024194  0.174731  0.5  0.276882  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,6 +437,14 @@
    "source": [
     "data_frames_02_24_22.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "suffering-regulation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
